andres/force-app/main/default/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <label>Vehicle</label>
    <nameField>
        <label>Make and Model</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>