andres/force-app/main/default/objects/Vehicle__c/fields/Latest_Service__c.field-meta.xml
<CustomField>
    <fullName>Latest_Service__c</fullName>
    <inlineHelpText>Date of when oil/filter have been changed.</inlineHelpText>
    <label>Latest Service</label>
    <type>Date</type>
</CustomField>