andres/force-app/main/default/objects/Vehicle__c/fields/Listed_As__c.field-meta.xml
<CustomField>
    <fullName>Listed_As__c</fullName>
    <label>Listed As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>