andres/force-app/main/default/objects/Vehicle__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <label>Lot</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <valueField>Lot__c.Vehicle_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>