andres/force-app/main/default/objects/Vehicle__c/fields/Next_Service_On__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_On__c</fullName>
    <formula>Latest_Service__c + 90</formula>
    <label>Next Service On</label>
    <type>Date</type>
</CustomField>