andres/force-app/main/default/objects/Vehicle__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Valued price of the vehicle.</description>
    <inlineHelpText>If a price is not set it will set the price to $1 as default. This is done to know that the car is for sale.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>