andres/force-app/main/default/objects/Vehicle__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>Coupe</fullName>
            </value>
            <value>
                <fullName>Hatchback</fullName>
            </value>
            <value>
                <fullName>Mini-van</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>