andres/force-app/main/default/objects/Vehicle__c/recordTypes/New_Coupe_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>New_Coupe_Vehicle</fullName>
    <active>true</active>
    <label>New Coupe Vehicle</label>
</RecordType>