andres/force-app/main/default/objects/Vehicle__c/validationRules/Latest_Service_Before_Todays_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Latest_Service_Before_Todays_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Latest_Service__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Latest_Service__c</errorDisplayField>
    <errorMessage>Latest Service should be before today&apos;s date.</errorMessage>
</ValidationRule>