andres/force-app/main/default/objects/Vehicle__c/validationRules/Mileage_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Mileage_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Mileage__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Mileage__c</errorDisplayField>
    <errorMessage>Mileage must be positive.</errorMessage>
</ValidationRule>